Added car make,model,versions api and swagger is also updated
